experimentation with the co module
